# wasm_solana

./: .dockerignore  .envrc  .gitignore  .npmrc  .release-plz.toml  Anchor.toml  Cargo.toml  devenv.nix  devenv.yaml  dprint.json  eslint.config.js  issues.md  leptosfmt.toml  license  package.json  pnpm-lock.yaml  readme.md  rust-toolchain.toml
.cargo/: config.toml
.config/: nextest.toml
.github/: dependabot.yml
.github/actions/devenv/: action.yml
.github/workflows/: ci.yml
crates/memory_wallet/: Cargo.toml  changelog.md  readme.md
crates/memory_wallet/src/: lib.rs
crates/memory_wallet/tests/: memory.rs
crates/serde_pubkey/: Cargo.toml
crates/serde_pubkey/src/: lib.rs
crates/serde_solana/: Cargo.toml  readme.md
crates/serde_solana/src/: lib.rs
crates/test_utils/: Cargo.toml  readme.md
crates/test_utils/src/: lib.rs
crates/test_utils_anchor/: Cargo.toml  changelog.md  readme.md
crates/test_utils_anchor/src/: lib.rs
crates/test_utils_insta/: Cargo.toml  changelog.md  readme.md
crates/test_utils_insta/src/: lib.rs
crates/test_utils_keypairs/: Cargo.toml  changelog.md  readme.md
crates/test_utils_keypairs/src/: lib.rs
crates/test_utils_solana/: Cargo.toml  changelog.md  readme.md
crates/test_utils_solana/src/: lib.rs  macros.rs  rpc_provider.rs  test_rpc_provider.rs  test_validator_runner.rs  utils.rs
crates/test_utils_solana/tests/: streams.rs
crates/wallet_standard/: Cargo.toml  changelog.md  readme.md
crates/wallet_standard/src/: error.rs  lib.rs  types.rs
crates/wallet_standard/src/experimental/: decrypt.rs  encrypt.rs  mod.rs
crates/wallet_standard/src/solana/: mod.rs  sign_and_send_transaction.rs  sign_in.rs  sign_message.rs  sign_transaction.rs  types.rs
crates/wallet_standard/src/standard/: connect.rs  disconnect.rs  events.rs  mod.rs
crates/wallet_standard_browser/: Cargo.toml  changelog.md  readme.md
crates/wallet_standard_browser/js/: app.js  wallet.js
crates/wallet_standard_browser/src/: browser_wallet.rs  browser_wallet_info.rs  constants.rs  lib.rs  types.rs
crates/wallet_standard_browser/src/features/: mod.rs
crates/wallet_standard_browser/src/features/experimental/: decrypt.rs  encrypt.rs  mod.rs
crates/wallet_standard_browser/src/features/solana/: async_signer.rs  extras.rs  mod.rs  sign_and_send_transaction.rs  sign_in.rs  sign_message.rs  sign_transaction.rs
crates/wallet_standard_browser/src/features/standard/: connect.rs  disconnect.rs  events.rs
crates/wallet_standard_devtools/: Cargo.toml
crates/wallet_standard_devtools/src/: devtools.rs  lib.rs
crates/wallet_standard_leptos/: Cargo.toml
crates/wallet_standard_wallets/: Cargo.toml  changelog.md  readme.md
crates/wallet_standard_wallets/src/: lib.rs  memory.rs
crates/wallet_standard_wallets/tests/: memory.rs
crates/wasm_client_anchor/: Cargo.toml  changelog.md  readme.md
crates/wasm_client_anchor/src/: anchor.rs  events.rs  lib.rs  macros.rs  utils.rs
crates/wasm_client_solana/: Cargo.toml  changelog.md  readme.md
crates/wasm_client_solana/src/: client.rs  constants.rs  errors.rs  extensions.rs  http_provider.rs  lib.rs  nonce_utils.rs  pubsub.rs  rpc_config.rs  rpc_filter.rs  rpc_response.rs  rpc_sender.rs  runtime.rs  solana_client.rs  solana_config_program.rs  solana_rpc_client.rs  transaction_status.rs  utils.rs
crates/wasm_client_solana/src/methods/: account_info.rs  balance.rs  block.rs  block_commitment.rs  block_height.rs  block_production.rs  block_time.rs  blockhash_valid.rs  blocks.rs  blocks_with_limit.rs  cluster_nodes.rs  epoch_info.rs  epoch_schedule.rs  fee_for_message.rs  first_available_block.rs  genesis_hash.rs  get_account_info.rs  get_balance.rs  get_block.rs  get_block_commitment.rs  get_block_height.rs  get_block_production.rs  get_block_time.rs  get_blocks.rs  get_blocks_with_limit.rs  get_cluster_nodes.rs  get_epoch_info.rs  get_epoch_schedule.rs  get_fee_for_message.rs  get_first_available_block.rs  get_genesis_hash.rs  get_health.rs  get_highest_snapshot_slot.rs  get_identity.rs  get_inflation_governor.rs  get_inflation_rate.rs  get_inflation_reward.rs  get_largest_accounts.rs  get_latest_blockhash.rs  get_leader_schedule.rs  (+60 more)
crates/wasm_client_solana/src/providers/: http_provider.rs  mod.rs  websocket_provider.rs
crates/wasm_client_solana/src/solana_account_decoder/: mod.rs  parse_account_data.rs  parse_address_lookup_table.rs  parse_bpf_loader.rs  parse_config.rs  parse_nonce.rs  parse_stake.rs  parse_sysvar.rs  parse_token.rs  parse_token_extension.rs  parse_vote.rs  validator_info.rs
crates/wasm_client_solana/src/solana_transaction_status/: extract_memos.rs  mod.rs  option_serializer.rs  parse_accounts.rs  parse_address_lookup_table.rs  parse_associated_token.rs  parse_bpf_loader.rs  parse_instruction.rs  parse_stake.rs  parse_system.rs  parse_token.rs  parse_vote.rs  token_balances.rs
crates/wasm_client_solana/src/solana_transaction_status/parse_token/extension/: confidential_mint_burn.rs  confidential_transfer.rs  confidential_transfer_fee.rs  cpi_guard.rs  default_account_state.rs  group_member_pointer.rs  group_pointer.rs  interest_bearing_mint.rs  memo_transfer.rs  metadata_pointer.rs  mint_close_authority.rs  pausable.rs  permanent_delegate.rs  reallocate.rs  scaled_ui_amount.rs  token_group.rs  token_metadata.rs  transfer_fee.rs  transfer_hook.rs
crates/wasm_client_solana/tests/: rpc_client.rs
programs/example_client/: Cargo.toml
programs/example_client/src/: lib.rs
programs/example_client/tests/: client.rs
programs/example_program/: Cargo.toml
programs/example_program/src/: lib.rs
setup/: cache-versions.json  types.d.ts
setup/editors/helix/: languages.toml
setup/keypairs/: admin.json  readme.md
setup/scripts/: nextest_setup.sh
