[workspace]
members = ["crates/*", "programs/*"]
resolver = "2"

[workspace.package]
authors = ["Ifiok Jr. <ifiokotung@gmail.com>"]
edition = "2021"
homepage = "https://github.com/ifiokjr/wasm_solana"
license = "Unlicense"
repository = "https://github.com/ifiokjr/wasm_solana"
rust-version = "1.79.0"

[workspace.dependencies]
anchor-lang = { git = "https://github.com/coral-xyz/anchor", rev = "955e7ea" }
anchor-spl = { git = "https://github.com/coral-xyz/anchor", rev = "955e7ea" }
anyhow = "1"
assert2 = "0.3"
async-trait = "0.1"
base64 = "0.22"
bincode = "1"
borsh = "1"
bs58 = "0.5"
bv = "0.11"
bytemuck = "1"
cfg-if = "1"
chrono-humanize = "0.2"
crossbeam-channel = "0.5"
derive_more = "1"
fork_stream = "0.1"
futures = "0.3"
futures-timeout = "0.1"
futures-timer = "3"
gloo-net = "0.6"
heck = "0.5"
indexmap = "2"
insta = "1"
js-sys = "0.3"
lazy_static = "1"
log = "0.4"
nacl = "0.5"
paste = "1"
pin-project = "1"
port_check = "0.2"
rand = "0.8"
regex = "1"
reqwest = "0.12"
reqwest-websocket = "0.4"
semver = "1"
send_wrapper = "0.6"
serde = "1"
serde-wasm-bindgen = "0.6"
serde_bytes = "0.11"
serde_json = "1"
serde_tuple = "1"
serde_with = "3"
solana-banks-client = "^2.1"
solana-banks-interface = "^2.1"
solana-client = "^2.1"
solana-config-program = "^2.1"
solana-faucet = "^2.1"
solana-program = "^2.1"
solana-program-runtime = "^2.1"
solana-program-test = "^2.1"
solana-rpc = "^2.1"
solana-sdk = "^2.1"
solana-test-validator = "^2.1"
solana-version = "^2.1"
solana-zk-token-sdk = "^2.1"
spl-associated-token-account = "6"
spl-memo = "6"
spl-pod = "0.5"
spl-tlv-account-resolution = "0.9"
spl-token = "7"
spl-token-2022 = "6"
spl-token-group-interface = "0.5"
spl-token-metadata-interface = "0.6"
strum = "0.26"
tarpc = "0.29"
test-log = "0.2"
thiserror = "2"
tokio = "1"
typed-builder = "0.20"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
wasm-bindgen-test = "0.3"
web-sys = "0.3"
zstd = { version = "0.13", default-features = false }

# internal crates
example_client = { path = "./programs/example_client" }
example_program = { path = "./programs/example_program" }
test_utils = { path = "./crates/test_utils" }

# publishable crates
test_utils_anchor = { path = "./crates/test_utils_anchor" }
test_utils_solana = { path = "./crates/test_utils_solana", version = "0.6.1" }
wallet_standard = { path = "./crates/wallet_standard", version = "0.4.1" }
wallet_standard_browser = { path = "./crates/wallet_standard_browser", version = "0.4.0" }
wallet_standard_wallets = { path = "./crates/wallet_standard_wallets", version = "0.1.16" }
wasm_client_anchor = { path = "./crates/wasm_client_anchor", version = "0.8.0" }
wasm_client_solana = { path = "./crates/wasm_client_solana", version = "0.7.0" }

[workspace.metadata.bin]
anchor-cli = { git = "https://github.com/coral-xyz/anchor", rev = "955e7ea", version = "0.30.1", bins = ["anchor"] }
cargo-insta = { version = "1.40.0" }
cargo-llvm-cov = { version = "0.6.10" }
cargo-nextest = { version = "0.9.72" }
wait-for-them = { version = "0.4.0", bins = ["wait-for-them"] }
wasm-bindgen-cli = { version = "0.2.99", bins = ["wasm-bindgen", "wasm-bindgen-test-runner"] }

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3

[profile.release.package.example_program]
overflow-checks = true
codegen-units = 1
incremental = false

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[profile.release]
lto = "fat"
overflow-checks = true

[workspace.lints.rust]
# Group lints
rust_2021_compatibility = { level = "warn", priority = -1 }
rust_2024_compatibility = { level = "warn", priority = -1 }

# Individual lints
unsafe_code = "deny"
unstable_features = "deny"
unused_extern_crates = "warn"
unused_import_braces = "warn"
unused_lifetimes = "warn"
unused_macro_rules = "warn"
unused_qualifications = "warn"
variant_size_differences = "warn"
edition_2024_expr_fragment_specifier = "allow"

[workspace.lints.clippy]
# Group lints
complexity = { level = "warn", priority = -1 }
correctness = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }

# Individual lints
blocks_in_conditions = "allow"
cargo_common_metadata = "allow"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
expl_impl_clone_on_copy = "allow"
items_after_statements = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
no_effect_underscore_binding = "allow"
tabs-in-doc-comments = "allow"
too_many_lines = "allow"
wildcard_dependencies = "deny"
wildcard_imports = "allow"
