[package]
name = "serde_solana"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
readme = "readme.md"
repository = { workspace = true }
rust-version = { workspace = true }
description = "Utility for serializing and deserializing solana types"

[dependencies]
serde = { workspace = true }
solana-sdk = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
assert2 = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
