[package]
name = "test_utils_anchor"
version = "0.1.0"
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
readme = "readme.md"
repository = { workspace = true }
rust-version = { workspace = true }
description = "Utilities and extensions for testing anchor programs and clients in wasm compatible environments"

[lints]
workspace = true

[dependencies]
anchor-lang = { workspace = true }
async-trait = { workspace = true }
solana-program = { workspace = true }
solana-program-test = { workspace = true }
solana-sdk = { workspace = true }
test_utils_solana = { workspace = true }
wallet_standard = { workspace = true, features = ["solana"] }
wasm_client_anchor = { workspace = true, features = ["ssr"] }
wasm_client_solana = { workspace = true, features = ["ssr"] }

[features]
test_validator = ["test_utils_solana/test_validator"]
