[package]
name = "test_utils_insta"
version = "0.1.4"
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
readme = "readme.md"
repository = { workspace = true }
rust-version = { workspace = true }
description = "Test utils to make working with `insta` redactions easier."

[dependencies]
anyhow = { workspace = true }
assert2 = { workspace = true }
insta = { workspace = true, features = ["redactions"] }

[lints]
workspace = true
