[package]
name = "test_utils_solana"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
readme = "readme.md"
repository = { workspace = true }
rust-version = { workspace = true }
description = "Utilities and extensions for testing solana in wasm compatible environments"

[lints]
workspace = true

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
anyhow = { workspace = true }
assert2 = { workspace = true }
async-trait = { workspace = true }
bincode = { workspace = true }
borsh = { workspace = true, features = ["derive"] }
chrono-humanize = { workspace = true }
crossbeam-channel = { workspace = true }
futures = { workspace = true }
futures-timer = { workspace = true }
lazy_static = { workspace = true }
log = { workspace = true }
port_check = { workspace = true }
rand = { workspace = true }
send_wrapper = { workspace = true, features = ["futures"] }
solana-banks-client = { workspace = true }
solana-banks-interface = { workspace = true }
solana-faucet = { workspace = true, optional = true }
solana-program = { workspace = true }
solana-program-runtime = { workspace = true }
solana-program-test = { workspace = true }
solana-rpc = { workspace = true }
solana-sdk = { workspace = true }
solana-test-validator = { workspace = true, optional = true }
spl-associated-token-account = { workspace = true }
spl-token-2022 = { workspace = true }
tarpc = { workspace = true }
typed-builder = { workspace = true }
wallet_standard = { workspace = true, features = ["solana"] }
wasm_client_anchor = { workspace = true }
wasm_client_solana = { workspace = true }

[features]
test_validator = ["dep:solana-faucet", "dep:solana-test-validator"]
ssr = ["wasm_client_solana/ssr"]
js = ["wasm_client_solana/js", "wasm_client_anchor/js"]
