[package]
name = "wallet_standard"
version = "0.2.0"
authors = { workspace = true }
categories = ["wasm", "web-programming"]
edition = { workspace = true }
homepage = { workspace = true }
include = ["src/**/*", "Cargo.toml", "readme.md"]
license = { workspace = true }
publish = true
readme = "readme.md"
repository = { workspace = true }
rust-version = { workspace = true }
tags = ["solana", "wallet", "web3", "blockchain"]
description = "An implementation of the solana wallet standard in rust"

[dependencies]
async-trait = { workspace = true }
bincode = { workspace = true, optional = true }
derive_more = { workspace = true, features = ["deref", "deref_mut", "from"] }
futures = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde-wasm-bindgen = { workspace = true, optional = true }
serde_bytes = { workspace = true }
solana-sdk = { workspace = true, optional = true }
thiserror = { workspace = true }
typed-builder = { workspace = true }
wasm-bindgen = { workspace = true, optional = true }

[features]
browser = ["dep:serde-wasm-bindgen", "dep:wasm-bindgen"]
solana = ["dep:bincode", "dep:solana-sdk"]

[lints]
workspace = true
