[package]
name = "wallet_standard_devtools"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
description = "Devtools and a test wallet for the solana wallet standard."

[lints]
workspace = true

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
js-sys = { workspace = true, optional = true }
leptos = { workspace = true }
leptos_query = { workspace = true }
wasm-bindgen = { workspace = true, optional = true }
web-sys = { workspace = true, features = ["DomRect"], optional = true }

[features]
dom = ["dep:js-sys", "dep:web-sys", "dep:wasm-bindgen"]
csr = ["leptos/csr", "dom"]
hydrate = ["leptos/hydrate", "dom"]
force = []
