[package]
name = "wallet_standard_wallets"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
description = "A collection of solana wallet implementations primarily used for testing."

[dependencies]
async-trait = { workspace = true }
derive_more = { workspace = true, features = ["deref", "deref_mut", "from", "into"] }
futures = { workspace = true }
indexmap = { workspace = true }
log = { workspace = true }
nacl = { workspace = true }
serde = { workspace = true, features = ["derive"] }
solana-program = { workspace = true }
solana-sdk = { workspace = true }
typed-builder = { workspace = true }
wallet_standard = { workspace = true, features = ["solana"] }
wasm_client_solana = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
assert2 = { workspace = true }
test_utils = { workspace = true }
test_utils_solana = { workspace = true, feautures = ["test_validator", "ssr"] }
tokio = { workspace = true, features = ["test-util"] }

[lints]
workspace = true
