[package]
name = "wasm_client_anchor"
version = "0.1.2"
authors = { workspace = true }
categories = ["wasm", "web-programming"]
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
tags = ["solana", "wallet", "web3", "blockchain", "anchor"]
description = "A wasm compatible anchor client"

[lints]
workspace = true

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
anchor-lang = { workspace = true }
async-trait = { workspace = true }
log = { workspace = true }
paste = { workspace = true }
retrier = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
solana-program = { workspace = true }
solana-sdk = { workspace = true }
thiserror = { workspace = true }
typed-builder = { workspace = true }
wallet_standard = { workspace = true, features = ["solana"] }
wasm_client_solana = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
assert2 = { workspace = true }
insta = { workspace = true, features = ["redactions", "json"] }
test-log = { workspace = true, features = ["trace"] }
tokio = { workspace = true, features = ["test-util"] }

[features]
js = ["retrier/wasm-bindgen", "wasm_client_solana/js"]
ssr = ["wasm_client_solana/ssr"]
